--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particle-image": "^1.0.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-vertical-timeline-component": "^3.6.0",
+    "sass": "^1.69.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "web-vitals": "^3.5.1"
   }
 }
