--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^1.0.34",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-particle-image": "^1.0.2",
     "react-scripts": "5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
-    "sass": "^1.69.7"
+    "sass": "^1.69.7",
+    "styled-components": "^6.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
